<resources>
    <string name="app_name">Room Shopping List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="dialog_title">New Item</string>
    <string name="dialog_message">Add New Shopping List Item</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nameTextView">Name</string>
    <string name="countTextView">Count</string>
    <string name="priceTextView">Price</string>
    <string name="nameEditText"></string>
    <string name="countEditText"></string>
    <string name="priceEditText"></string>
</resources>